tests/baselines/reference/stringIndexerConstrainsPropertyDeclarations2.errors.txt
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts(15,5): error TS2411: Property 'c' of type '数字' is not assignable to string index type 'A'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts(16,5): error TS2411: Property 'd' of type '文字' is not assignable to string index type 'A'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts(23,5): error TS2411: Property 'c' of type '数字' is not assignable to string index type 'A'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts(24,5): error TS2411: Property 'd' of type '文字' is not assignable to string index type 'A'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts(31,5): error TS2411: Property 'c' of type '数字' is not assignable to string index type 'A'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts(32,5): error TS2411: Property 'd' of type '文字' is not assignable to string index type 'A'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts(36,5): error TS2322: Type '{ a: 类为 A; b: 类为 B; }' is not assignable to type '{ [x: 文字]: A; }'.
  Property 'a' is incompatible with index signature.
    Type '类为 A' is not assignable to type 'A'.
      Property 'foo' is missing in type '类为 A'.


==== tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations2.ts (7 errors) ====
    // String indexer providing a constraint of a user defined type
    
    class A {
        foo(): string { return ''; }
    }
    
    class B extends A {
        bar(): string { return ''; }
    }
    
    class Foo {
        [x: string]: A;
        a: A; // ok
        b: B; // ok
        c: number; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'c' of type '数字' is not assignable to string index type 'A'.
        d: string; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'd' of type '文字' is not assignable to string index type 'A'.
    }
    
    interface Foo2 {
        [x: string]: A;
        a: A; // ok
        b: B; // ok
        c: number; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'c' of type '数字' is not assignable to string index type 'A'.
        d: string; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'd' of type '文字' is not assignable to string index type 'A'.
    }
    
    var a: {
        [x: string]: A;
        a: A; // ok
        b: B; // ok
        c: number; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'c' of type '数字' is not assignable to string index type 'A'.
        d: string; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'd' of type '文字' is not assignable to string index type 'A'.
    };
    
    // error
    var b: { [x: string]: A } = {
        ~
!!! error TS2322: Type '{ a: 类为 A; b: 类为 B; }' is not assignable to type '{ [x: 文字]: A; }'.
!!! error TS2322:   Property 'a' is incompatible with index signature.
!!! error TS2322:     Type '类为 A' is not assignable to type 'A'.
!!! error TS2322:       Property 'foo' is missing in type '类为 A'.
        a: A,
        b: B
    }